--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body{
     margin:0px;
     background-color: #eeeeee6b;
 }
+.pName{
+    font-weight: bold;
+    margin-top: 10px;
+}
 .fix-position {
     top: 0;
     width: 100%;
