--- a/css/stype1.css
+++ b/css/stype1.css
@@ -82,7 +82,7 @@
 
 .container1 .phu-ngoai .goods .goods-co {
 	overflow: auto;
-	border: 1px solid;
+	border: 1px solid #808080;
 	border-radius: 7px;
 }
 
